# sonetel-python

./: CHANGELOG.md  Readme.md  setup.cfg
src/: README.md
src/sonetel/: __init__.py  account.py  api.py  subscription.py
src/sonetel_api/: account.py  subscription.py
