[metadata]
name = sonetel
version = 0.1.0
author = Sonetel
author_email = dev.support@sonetel.com
description = Package to provide a layer of abstraction while using the Sonetel API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aashish-joshi/sonetel-python
project_urls =
    Bug Tracker = https://github.com/aashish-joshi/sonetel-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src